--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 # requirements.txt
 
-# Flask framework for building web applications
-Flask==2.1.0
-
-# Requests library for making HTTP requests
-requests==2.26.0
-
-# MySQL Connector/Python for connecting to MySQL databases
-mysql-connector-python==8.0.28
-
-# Flask-Login for managing user sessions in Flask applications
-Flask-Login==0.5.0
+bcrypt == 4.1.2
+Flask == 3.0.2
+Flask-bcrypt == 1.0.1
+Flask-Login == 0.6.3
+Flask-Mysql == 1.5.2
+Flask-Session == 0.6.0
+Jinja2 == 3.1.3
+Werkzeug == 3.0.1
+requests == 2.26.0
+mysql-connector-python == 8.0.28
