--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
 # requirements.txt
-# mysql == 8.0.28
-bcrypt == 4.1.2
-Flask <= 2.3.3
-Flask-bcrypt == 1.0.1
-Flask-Login == 0.6.3
-Flask-Mysql == 1.5.2
-Flask-Session == 0.6.0
-Jinja2 == 3.1.3
-Werkzeug == 3.0.1
-requests == 2.26.0
-mysql-connector-python == 8.0.28
+Flask
+Flask-MySQLdb
+Jinja2
+requests
+mysql-connector-python
