--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # requirements.txt
-Flask
-Flask-Login
-Flask-bcrypt
+Flask == 3.0.2
+Flask-Login == 0.6.3
+Flask-bcrypt == 1.0.1
 # Flask-MySQL
-Flask-MySQLdb
-Flask-Session
-Jinja2
-requests
-cryptography
+Flask-MySQLdb == 2.0.0
+Flask-Session == 0.8.0
+Jinja2 == 3.1.3
+requests == 2.31.0
+cryptography == 42.0.5
